# coin-or-kb

./: .gitignore  AGENTS.md  Doxyfile  README.md
.claude/commands/: annotate.md
.claude/skills/: annotate-codebase.md  annotation-tags-reference.md
.github/workflows/: deploy-docs.yml
.kb/: library-mapping.json  status.json
.kb/log/: progress.md
.kb/log/retrospectives/: coinutils-pilot-retro.md  coinutils-session2-retro.md
.kb/schemas/: tags.json
data/: algorithm-guidance.yaml  concepts-seed.yaml
docs/plans/: 2024-11-30-zola-docs-site-design.md  2025-11-28-solver-knowledge-base-design.md  knowledge-graph.md
layer-0/CoinUtils/src/: CoinAdjacencyVector.hpp  CoinAlloc.hpp  CoinBronKerbosch.hpp  CoinBuild.hpp  CoinCliqueExtender.hpp  CoinCliqueList.hpp  CoinCliqueSet.hpp  CoinConflictGraph.hpp  CoinCutPool.hpp  CoinDenseFactorization.hpp  CoinDenseVector.hpp  CoinDistance.hpp  CoinDynamicConflictGraph.hpp  CoinError.hpp  CoinFactorization.hpp  CoinFileIO.hpp  CoinFinite.hpp  CoinFloatEqual.hpp  CoinHelperFunctions.hpp  CoinIndexedVector.hpp  CoinLpIO.hpp  CoinMessage.hpp  CoinMessageHandler.hpp  CoinModel.hpp  CoinModelUseful.hpp  CoinMpsIO.hpp  CoinNodeHeap.hpp  CoinOddWheelSeparator.hpp  CoinOslFactorization.hpp  CoinPackedMatrix.hpp  CoinPackedVector.hpp  CoinPackedVectorBase.hpp  CoinParam.hpp  CoinPragma.hpp  CoinPresolveDoubleton.hpp  CoinPresolveDual.hpp  CoinPresolveDupcol.hpp  CoinPresolveEmpty.hpp  CoinPresolveFixed.hpp  CoinPresolveForcing.hpp  (+29 more)
layer-1/Clp/examples/: myPdco.hpp
layer-4/Creme/: .gitattributes  .travis.yml  AUTHORS  Dependencies  Externals.releases  INSTALL  Makefile.am  Makefile.in  README  README.md  acinclude.m4  configure  configure.ac
layer-4/Creme/.coin-or/: projDesc.xml
layer-4/Creme/Creme/: Makefile.am  Makefile.in  configure  configure.ac  creme-uninstalled.pc.in  creme.pc.in
layer-4/Creme/Creme/data/: format.txt
layer-4/Creme/Creme/data/acyclic/: ac-500-0.bz2  ac-500-12500.bz2  ac-500-25000.bz2  ac-500-37500.bz2  ac-500-6250.bz2  ac-500-62500.bz2  ac-500-93750.bz2
layer-4/Creme/Creme/data/discrAnalysis/: BCW367.bz2  BCW683.bz2  OpelSaab76.bz2  OpelSaab80.bz2  OpelSaab84.bz2  Solar-flare1066.bz2  Solar-flare323.bz2  WPBC194.bz2  balloons76.bz2  breast-cancer-2.bz2  breast-cancer-400.sav.bz2  bridges-132.bz2  busvan-437.bz2  busvan-445.bz2  busvan-447.bz2  bv-os282.bz2  bv-os376.bz2  chorales-107.bz2  chorales-116.bz2  chorales134.bz2  credit_300.bz2  flag-169.bz2  glass-163.bz2  horse-colic-151.bz2  horse-colic-185.bz2  horse-colic-253.bz2  house-votes84-435.bz2  iris-150.bz2  lymphography142.bz2  me_an_107.bz2  me_an_137.bz2  me_an_152.bz2  monks-train-124.bz2  monks-train115.bz2  monks-train122.bz2  opelsaab-83.bz2  pageblocks-198.bz2  pageblocks_277.bz2  pageblocks_444.bz2  post-operative-88.bz2  (+2 more)
layer-4/Creme/Creme/data/netlib/: bgdbg1.bz2  bgetam.bz2  bgindy.bz2  bgprtr.bz2  box1.bz2  ceria3d.bz2  chemcom.bz2  cplex1.bz2  cplex2.bz2  ex72a.bz2  ex73a.bz2  forest6.bz2  galenet.bz2  gran.bz2  greenbea.bz2  itest2.bz2  itest6.bz2  klein1.bz2  klein2.bz2  klein3.bz2  mondou2.bz2  pilot4i.bz2  qual.bz2  reactor.bz2  vol1.bz2  woodinfe.bz2
layer-4/Creme/Creme/data/random/: prob.10.30.100.0.bz2  prob.10.30.100.1.bz2  prob.10.30.100.2.bz2  prob.10.30.100.3.bz2  prob.10.30.100.4.bz2  prob.10.40.100.0.bz2  prob.10.40.100.1.bz2  prob.10.40.100.2.bz2  prob.10.40.100.3.bz2  prob.10.40.100.4.bz2  prob.10.50.100.0.bz2  prob.10.50.100.1.bz2  prob.10.50.100.2.bz2  prob.10.50.100.3.bz2  prob.10.50.100.4.bz2  prob.10.60.100.0.bz2  prob.10.60.100.1.bz2  prob.10.60.100.2.bz2  prob.10.60.100.3.bz2  prob.10.60.100.4.bz2  prob.10.70.100.0.bz2  prob.10.70.100.1.bz2  prob.10.70.100.2.bz2  prob.10.70.100.3.bz2  prob.10.70.100.4.bz2  prob.10.80.100.0.bz2  prob.10.80.100.1.bz2  prob.10.80.100.2.bz2  prob.10.80.100.3.bz2  prob.10.80.100.4.bz2  prob.10.90.100.0.bz2  prob.10.90.100.1.bz2  prob.10.90.100.2.bz2  prob.10.90.100.3.bz2  prob.10.90.100.4.bz2  prob.15.40.100.1.bz2  prob.15.40.100.2.bz2  prob.15.40.100.3.bz2  prob.15.40.100.4.bz2  prob.15.40.100.5.bz2  (+96 more)
layer-4/Creme/Creme/inc/: config_creme.h.in
layer-4/Creme/Creme/src/Base/: LICENSE  Makefile.MPI  Makefile.am  Makefile.in  chooseblock.c  chooseblock.h  cmdline.c  cmdline.h  config.h.in  config_creme.h.in  gen-acyclic-sparse.c  gen-acyclic.c  init.c  init.h  isfeas.c  isfeas.h  linopt.c  linopt.h  locsrch.c  locsrch.h  lp2compact.cpp  lpio.c  lpio.h  main.c  misc.c  misc.h  move.c  move.h  readbz.c  rtr.c  rtr.h  sparse.h  writelp.c  writelp.h
layer-4/Creme/Creme/test/: Makefile.am  Makefile.in  grandTest.sh.in
layer-4/Creme/Creme/test/data/: prob.5.110.100.0.bz2  refinery.bz2
layer-4/Creme/doxydoc/: doxygen.conf.in
layer-4/Sonnet/: CHANGELOG.txt
layer-4/clp-spreadsheet-solver/: AUTHORS  BPP_Spreadsheet_Solver_v2.25.xlsm  CLP_Spreadsheet_Solver_v1.64.xlsm  README.md
mcp-server/: coin_or_kb_server.py  knowledge_graph.py
prompts/: pass1-structural.md  pass2-semantic.md
prompts/library-context/: TEMPLATE.md  coinutils.md
scripts/: annotation-metrics.py  build-docs.sh  build-knowledge-graph.py  check-see-refs.py  coverage-report.py  extract-annotations.py  extract-zips.sh  fix-links.py  generate-algorithm-pages.py  generate-browser-api.py  generate-class-pages.py  kb-layer-report.py  kb-library-file-counts.sh  kb-missing-brief.sh  kb-outline.py  kb-query.py  kb-see-graph.py  kb-status.py  kb-tag-counts-per-file.py  kb-tag-density.sh  kb-tag-search.py  kb-todo-count.pl  kb-todo-list.py  kg-query.py  pass2-audit.py  transform-doxygen.py  update-status.py  validate-knowledge-graph.py  validate.py
site/: config.toml
site/content/: _index.md  browser.md
site/sass/: style.scss
site/static/: manifest.json
site/templates/: algorithm.html  algorithms-index.html  base.html  branch-bound-interactive.html  browser.html  class.html  gomory-cuts-interactive.html  index.html  interior-point-interactive.html  learning-path.html  learning-paths-index.html  libraries.html  library.html  page.html  section.html  simplex-interactive.html  taxonomy_list.html  taxonomy_single.html
(+4406 files in other folders)
